@@ -2,6 +2,8 @@ AUX curl-7.30.0-prefix.patch 880 BLAKE2B 5b7552a8339014221864a585d174b02a96ec7dd
 AUX curl-fix-gnutls-nettle.patch 1186 BLAKE2B 5a7ea1ab68e8e314cda5b957335caf84e5b0e9b2b65c1eacfe94349139ff27903d55ae608a71a0389bf9f8bfbda92184c4cc30ca0b96b13b11f0d77cbf4c7b53 SHA512 b88d4d71a1d55626aedea620e94a5b6064141c6ff0d8a64c784705d44d4a00dc789dd0a55a56320ca4c9f2b9914e72285447c9310bb4563b45d7f3430b18a0fa
 AUX curl-respect-cflags-3.patch 406 BLAKE2B 1b533144858aff5566150c4a2648ad2e48e8ff29849ae285592edfee4b3332d06e750395dea7190ee6a01d2b5ee2c2c42c10400c2e5defa09963a90a1a10417d SHA512 3219e4e67d534e35012909243fc8d69d58989462db44dd507c502e7aaa299f1d9a01392e2c83797cc2bdb53d503470c5d6e7bf94572a6ccc6e5eafcc0466bc54
 DIST curl-7.71.1.tar.xz 2387660 BLAKE2B 47b3a4704ae8b09b37f7a9d8850fd7d692d91db3dd4ad776aad9a57d0162e0f4091e0387a850eb048f834e6dfee5bcb36da56493a106696c72072c612b47f623 SHA512 631e0ee8562e5029fe022bfab4222836a3e6d666e82e2bfbd78311fe5985105218a36d1ea68c93472fc57a12b713957a3bcca6e385eda4e58a47ca8d5d50265b
+DIST curl-7.74.0.tar.xz 2400972 BLAKE2B bef9e01493994afc933549a78b41065708aeaa9f6f5cdd1dbf2f43bbb03bbc97b17308b8bda5f11599c3cc0c6c77903e6fa6f1310ff874fad902a59566b51e8a SHA512 5d987f0b4d051c9e254f14d4e2a05f7cda9fb0f0ac7b3ca3664a25a51ee5ffe092ee072c0d9a613fcd3f34727d75bba14b70f5500cb110ca818591e071c3e6f4
 EBUILD curl-7.71.1.ebuild 8291 BLAKE2B f537a2bd086441550245094d272b9aec3f70ec41b4972e1ef65dd6e5ccc7d1482256f5f20bfaa8a9e364c684ac90645ef0305d0eed53b3ea37af876b137fd8d7 SHA512 ca612765b9458525b52bf119ad7453a84a4e9149e11e1a9df4540bb0b38180dab96b2adf589299c2fd8ad506f64c9170b77a982dda6abdfdce2924ec1f7d70ae
-MISC ChangeLog 392 BLAKE2B 7682917051aee7fc3bf45d155b4e530874714e665b4e4531868964d5a0aa6fa3aa2bbb649f839456a598a5ba80f1db51ab52fad090ccf390d2a66fd8e56cdbbf SHA512 6495e430898cf474f57419a54d6cd941724f52b4abedc52f8ab8b2f69f064fce423a4baf514988a52f2754a090700296fbb89811f41c131a1ca74f2cb1771e55
+EBUILD curl-7.74.0-r2.ebuild 8715 BLAKE2B a21d73d92867a86e04a138400c8cc672083a8800a8d8a4b8c81a139085edc45e701086f2b2d12d746908876cea489520ffdb26d47319d1ec796305f16eac23a5 SHA512 52a8c885005c1c74d029e59219f9c676e3ee6a507d88b129b6801375258f62bd11d516a280e2f55d6fb7c137ecbbcd0f2bf6655f17a9cc9e7d7ae68e5819b2cf
+MISC ChangeLog 451 BLAKE2B 6cadbe636de1d360c070b00d0d94917cb7bf9873b5f3ec6f58ce6a67879f457c48b6e40658754d56f436f66b71ca4cc3d29a1de81b3733a6010574a776801b30 SHA512 f1c3970bb8232d5bffe5bfab003bd5ac5af061946656f92b43503e4672dbd28b639c4d79ad8f6b4dd4ed01f69f370bda159b4a24f40fdd6dc8615b38c38e7a52
 MISC metadata.xml 3299 BLAKE2B 72e000b0ae15346ed6d3a2e1e6bf60d36a1b3f9fc53ee21c7c1cb40abb6c39806729c49638528e106f8bf4dba28199c0cf6c2af0e6d072149cdaa447d957cf5a SHA512 fcf856c64fdb8010ed5e435e16c8f91efdba8a8f1f3e55c2490558729c3cf3c7f2de50370335b54bfa596be385ac6cfcb52192393abd802dab120c2c56d7958f
