@@ -1,5 +1,6 @@
+*curl-7.74.0-r2
+::gentoo		add the ability to add extra ssls
 *curl-7.71.1
-
 ::gentoo		base ebuild
 ::prototype99	simplify dependencies, remove redundant required use logic, remove extra comments that just make things more confusing, simply use flag naming, tighten required use, remove duplicate code
 ::rindeal		remove pointless quotes, empty line, remove redundant use flag checks, add extra use flags, pass array to econf, add more in depth required use
